--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.5.RELEASE</version>
+		<version>2.4.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.bcp</groupId>
 	<artifactId>SistemaBCP</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SistemaBCP</name>
+	<name>Proyecto_Integrador</name>
 	<description>Demo project for Spring Boot</description>
 
-	<properties>
+<properties>
 		<java.version>1.8</java.version>
 	</properties>
 
