--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/bcp?serverTimezone=GMT-5
-spring.datasource.username=root
-spring.datasource.password=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/sql10380606?serverTimezone=GMT-5
+spring.datasource.username=sql10380606
+spring.datasource.password=RZDuzGhJuT
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
@@ -13,4 +13,4 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.mvc.view.prefix=/WEB-INF/vistas/
 spring.mvc.view.suffix=.jsp
 
-server.port=8090
+server.port=3306
