--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/sql10380606?serverTimezone=GMT-5
+spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net/sql10380606?serverTimezone=GMT-5
 spring.datasource.username=sql10380606
 spring.datasource.password=RZDuzGhJuT
 
@@ -13,4 +13,4 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.mvc.view.prefix=/WEB-INF/vistas/
 spring.mvc.view.suffix=.jsp
 
-server.port=3306
+server.port=8090
