--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net/sql10380606?serverTimezone=GMT-5
-spring.datasource.username=sql10380606
-spring.datasource.password=RZDuzGhJuT
+spring.datasource.url=jdbc:mysql://sql10.freemysqlhosting.net/sql10381833?serverTimezone=GMT-5
+spring.datasource.username=sql10381833
+spring.datasource.password=dFRgbJJGXR
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto= none 
